# assemblers_workplace

./: .dockerignore  Dockerfile  README.md  config.yaml  docker-compose.yml  manage.py  pyproject.toml
app/: admin.py  apps.py  forms.py  ip_whitelist_middleware.py  signals.py
app/migrations/: 0001_initial.py  0002_wbordermodel_task.py  0003_remove_wbordermodel_business_account_and_more.py  0004_wbordermodel_order_products_and_more.py  0005_remove_taskmodel_completed_and_more.py  0006_alter_taskmodel_amount_alter_taskmodel_task_state_and_more.py  0007_alter_taskmodel_task_state.py  0008_taskmodel_document_alter_taskmodel_task_state.py  0009_alter_taskmodel_document_alter_taskmodel_task_state.py  0010_alter_taskmodel_task_state.py  0011_taskmodel_qr_document_alter_taskmodel_task_state.py  0012_taskmodel_stickers_document_and_more.py  0013_rename_stickers_document_taskmodel_stickers_pdf_doc_and_more.py  0014_remove_taskmodel_qr_document_and_more.py  0015_wbordermodel_is_bundle_alter_taskmodel_task_state.py  0016_remove_wborderproductmodel_packaging_class_and_more.py  0017_alter_taskmodel_document_alter_taskmodel_task_state_and_more.py  0018_remove_taskmodel_document_and_more.py  0018_rename_document_taskmodel_assembler_document_and_more.py  0019_allowedipmodel_alter_taskmodel_options_and_more.py  0020_remove_wbordermodel_wb_is_large_cargo_and_more.py  0021_failednmidproductmodel_alter_taskmodel_task_state.py  0022_wbaccountwarehousemodel_processing_flag_and_more.py  0023_auto_20240216_0911.py  0024_accountwarehousemodel_ozon_id_and_more.py  0025_wbtaskmodel_alter_wbsupplymodel_task_and_more.py  0026_remove_wbordermodel_order_products_and_more.py
app/models/: __init__.py  account_warehouses.py  allowed_ips.py  business_accounts.py  employees.py  failed_nm_id_products.py  tasks.py  warehouses.py  wb_account_warehouses.py  wb_business_accounts.py  wb_order_products.py  wb_orders.py  wb_supplies.py  wb_tasks.py  wb_warehouses.py
assemblers_workplace/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_create_task.py  test_utils.py
(+16 files in other folders)
