[tool.poetry]
name = "assemblers-workplace-django"
version = "0.1.0"
description = ""
authors = ["VladimirKhrabrov <khrabrov.v@brandsgo.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
black = "^23.9.1"
requests = "^2.31.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
django-nested-admin = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
