[tool.pytest.ini_options]
log_level="ERROR"
log_cli_level="ERROR"
DJANGO_SETTINGS_MODULE = "assemblers_workplace.settings"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]


[tool.poetry]
name = "assemblers-workplace-django"
version = "0.1.0"
description = ""
authors = ["VladimirKhrabrov <khrabrov.v@brandsgo.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
black = "^23.9.1"
requests = "^2.31.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
django-nested-admin = "^4.0.2"
openpyxl = "^3.1.2"
reportlab = "^4.0.5"
fpdf = "^1.7.2"
svglib = "^1.5.1"
pillow = "^10.0.1"
pypdf2 = "^3.0.1"
python-barcode = "^0.15.1"
cairosvg = "^2.7.1"
weasyprint = "^60.1"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
